@@ -1,22 +1,0 @@
-program
-        :       temporaries? EOF
-        ;
-
-temporaries
-	:       '||'
-        |       '|' temporaryVariables '|'
-        |       '|' temporaryVariables error
-        ;
-
-temporaryVariables
-        :       variable*
-        ;
-
-variable
-        :       NAME
-        ;
-
-error
-	:	~('|' | NAME)
-	;
-
